<resources>
    <string name="app_name">Wasigram</string>
    <string name="profileCount">150</string>
    <string name="like">likes</string>
    <string name="dummy_text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim.</string>
    <string name="viewComments">view all comments</string>
    <string name="viewMore">view more</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">home</string>
    <string name="search">search</string>
    <string name="addvalue">addValue</string>
    <string name="profile">profile</string>
    <string name="status">Profile Status</string>
    <string name="counter">2</string>
    <string name="posts">Posts</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="saved">Saved</string>
</resources>