<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home"
        app:showAsAction="always"
        android:title="@string/home" />
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search"
        app:showAsAction="always"
        android:title="@string/search" />
    <item
        android:id="@+id/addBox"
        android:icon="@drawable/ic_add_box"
        app:showAsAction="always"
        android:title="@string/addvalue" />
    <item
        android:id="@+id/lovely"
        android:icon="@drawable/ic_like"
        app:showAsAction="always"
        android:title="@string/like" />
    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_profile"
        app:showAsAction="always"
        android:title="@string/profile" />
</menu>