<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ProfileFragment">

    <include
        android:id="@+id/user_profile_toolbar"
        layout="@layout/toolbar_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/user_profile_image"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_80sdp"
        android:layout_margin="@dimen/_12sdp"
        android:src="@drawable/ic_profile"
        app:civ_border_color="@color/black"
        app:civ_border_width="0.5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_profile_toolbar" />

    <TextView
        android:id="@+id/user_profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:fontFamily="sans-serif"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="@dimen/_12ssp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/user_profile_image"
        app:layout_constraintTop_toBottomOf="@id/user_profile_image" />

    <TextView
        android:id="@+id/user_profile_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_4sdp"
        android:text="@string/status"
        android:textSize="@dimen/_12ssp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="@id/user_profile_name"
        app:layout_constraintTop_toBottomOf="@id/user_profile_name" />

    <TextView
        android:id="@+id/user_profile_posts_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:fontFamily="sans-serif"
        android:text="@string/counter"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/_12ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/user_profile_posts"
        app:layout_constraintEnd_toEndOf="@id/user_profile_posts"
        app:layout_constraintStart_toStartOf="@id/user_profile_posts"
        app:layout_constraintTop_toTopOf="@id/user_profile_image" />

    <TextView
        android:id="@+id/user_profile_posts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_2sdp"
        android:fontFamily="sans-serif"
        android:text="@string/posts"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toStartOf="@id/user_profile_followers"
        app:layout_constraintStart_toEndOf="@id/user_profile_image"
        app:layout_constraintTop_toBottomOf="@id/user_profile_posts_counter" />

    <TextView
        android:id="@+id/user_profile_followers_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:fontFamily="sans-serif"
        android:text="@string/counter"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/_12ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/user_profile_followers"
        app:layout_constraintEnd_toEndOf="@id/user_profile_followers"
        app:layout_constraintStart_toStartOf="@id/user_profile_followers"
        app:layout_constraintTop_toTopOf="@id/user_profile_image" />

    <TextView
        android:id="@+id/user_profile_followers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_2sdp"
        android:fontFamily="sans-serif"
        android:text="@string/followers"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toStartOf="@id/user_profile_following"
        app:layout_constraintStart_toEndOf="@id/user_profile_posts"
        app:layout_constraintTop_toBottomOf="@id/user_profile_followers_counter" />

    <TextView
        android:id="@+id/user_profile_following_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:fontFamily="sans-serif"
        android:text="@string/counter"
        android:textColor="@color/black"
        android:textSize="@dimen/_12ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/user_profile_following"
        app:layout_constraintEnd_toEndOf="@id/user_profile_following"
        app:layout_constraintStart_toStartOf="@id/user_profile_following"
        app:layout_constraintTop_toTopOf="@id/user_profile_image" />

    <TextView
        android:id="@+id/user_profile_following"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_2sdp"
        android:fontFamily="sans-serif"
        android:text="@string/following"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/user_profile_followers"
        app:layout_constraintTop_toBottomOf="@id/user_profile_following_counter" />

    <Button
        android:id="@+id/user_edit_profile"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:text="@string/edit_profile"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/_11ssp"
        app:layout_constraintEnd_toStartOf="@id/user_saved_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_profile_status" />

    <Button
        android:id="@+id/user_saved_profile"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_4sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:text="@string/saved"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/_11ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/user_edit_profile"
        app:layout_constraintTop_toTopOf="@id/user_edit_profile" />
    <com.google.android.material.tabs.TabLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_edit_profile"
        app:tabMode="fixed">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/ic_grid"
            />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/ic_tag"
            />
    </com.google.android.material.tabs.TabLayout>
</androidx.constraintlayout.widget.ConstraintLayout>